---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 4.0.4
Date: 2024-11-01
  Bugfixes:
    - Fixed crash when modifying undo stack that contains actions without direct target (like adding wire or building a tile).
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: 2024-11-01
  Bugfixes:
    - Fixed crash when technology is researched with a force that has not created any unapproved ghosts yet.
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 2024-10-31
  Bugfixes:
    - Fixed missing recipes in machines for unapproved ghost force.
---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 2024-10-27
  Bugfixes:
    - Fixed crash when running migrations for storing approval badges as objects.
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2024-10-26
  Changes:
    - Dropped support for game version 1.1.
    - Deconstruction planners from library are now fully supported for deconstructing unapproved ghosts.
    - Default control for construction planner has been changed to SHIFT + C to avoid collision with vanilla copper wire connection mode one.
    - Auto-approval is now by default enabled in the player settings. Previously it was disabled. This should reduce confusion for new mod users. Setting can still be changed and toggled via shortcut as in previous versions.
  Features:
    - Added support for game version 2.0.
  Bugfixes:
    - Fixed incorrect shortcut state when starting new game or when new players join the game.